--- a/Programación-Web-Valencia/2-Formato/Activitat1.html
+++ b/Programación-Web-Valencia/2-Formato/Activitat1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activitat 1</title>
 </head>
 
 <body>
@@ -13,5 +13,5 @@
     lacus, luctus accumsan tortor! Nisi porta lorem mollis aliquam ut porttitor leo a diam sollicitudin 
     tempor id eu nisl nunc mi ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.</p>
 </body>
-
+    
 </html>
