--- a/Programación-Web-Valencia/2-Formato/Activitat2.html
+++ b/Programación-Web-Valencia/2-Formato/Activitat2.html
@@ -9,11 +9,20 @@
 
 <body> 
     <h1>
-    Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt 
-    ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet porttitor lacus, luctus 
-    accumsan tortor!
+        Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt 
+        ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet porttitor lacus, luctus 
+        accumsan tortor!
     </h1>
-    <h2> </h2>
+
+    <h2>
+        Nisi porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi ipsum,
+        faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.
+    </h2>
+
+    <h3>
+        Pharetra, massa massa ultricies mi, quis hendrerit dolor magna eget est lorem ipsum dolor. Sagittis orci,
+        a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id.
+    </h3>
 </body>
 
 </html>
